--- a/python/doc/_static/style.css
+++ b/python/doc/_static/style.css
@@ -26,3 +26,30 @@ a, a:hover, a:focus, a code {
 	text-transform: uppercase;
 }
 
+/* and make citations look like admonitions, instead of looking like butt */
+.citation {
+	display: inline-block;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	border: 1px solid #eee;
+	border-left-width: 6px;
+	border-left-color: #31708f;
+	border-radius: 3px;
+}
+
+.citation td {
+	display: inline-block;
+	border: none !important;
+	padding-left: 20px !important;
+	padding-top: 0px !important;
+	padding-bottom: 0px !important;
+}
+
+.citation td.label {
+	color: #31708f;
+	font-size: 18px;
+	margin-bottom: 5px;
+}
+
