fix logo link on docsite, add helpful messages to deployWebsite gradle task

--- a/doc/layouts/partials/logo.html
+++ b/doc/layouts/partials/logo.html
@@ -13,4 +13,4 @@ https://learn.netlify.app/en/basics/style-customization/#change-the-logo
 		color: #ffffff !important;
 	}
 </style>
-<h1 class="title"><a href="/">Osprey</a></h1>
+<h1 class="title"><a href="/donaldlab/software/osprey/docs/">Osprey</a></h1>
